- fix iframe issue restricting scroll/click on iPhone.

--- a/static/home.css
+++ b/static/home.css
@@ -72,3 +72,8 @@
 @keyframes blink {
     50% { border-color: transparent; }
 }
+
+iframe {
+    overflow: auto !important;
+    -webkit-overflow-scrolling: touch !important;
+}
